--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <!-- Build an executable JAR -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.2</version> <!-- Use a more recent version -->
+        <version>3.2.0</version> <!-- Updated to version 3.2.0 -->
         <configuration>
           <archive>
             <manifest>
